--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx tsc && node dist/server.js",
-    "start:dev": "nodemon serves.ts",
+    "start:dev": "nodemon server.ts",
     "build": "tsc"
   },
   "author": "",
